--- a/customer_portal.html
+++ b/customer_portal.html
@@ -258,13 +258,13 @@
                                 <li>Seat vaccum</li>
                                 <li>Surface protectent for the dash and display/controls</li>
                                 <li>Steering wheel and dash clean</li>
-                                <li><strong>Shampoo carpets and seats</strong></li>
-                                <li><strong>Premium Leather treatment</strong></li>
-                                <li><strong>Door jam cleaning</strong></li>
-                                <li><strong>Rims and tires cleaned and wiped down</strong></li>
-                                <li><strong>Console scrub down</strong></li>
-                                <li><strong>Pet hair removal</strong></li>
-                                <li><strong>Odor removal</strong></li>
+                                <li>Shampoo carpets and seats</li>
+                                <li>Premium Leather treatment</li>
+                                <li>Door jam cleaning</li>
+                                <li>Rims and tires cleaned and wiped down</li>
+                                <li>Console scrub down</li>
+                                <li>Pet hair removal</li>
+                                <li>Odor removal</li>
                             </ul>
                         </div>
                         <button class="select-package-btn btn-green" data-package-type="Level 2 Detail - Sedan" data-package-price="249">Select Package</button>
@@ -291,15 +291,15 @@
                                 <li>Console scrub down</li>
                                 <li>Pet hair removal</li>
                                 <li>Odor removal</li>
-                                <li><strong>FINE TOOTH COMB in between seats cleaning</strong></li>
-                                <li><strong>Glove compartment cleaning</strong></li>
-                                <li><strong>Trunk shampoo and vaccum</strong></li>
-                                <li><strong>Door controls cleaning</strong></li>
-                                <li><strong>Hard to reach areas deep level shampoo</strong></li>
-                                <li><strong>Meticulous cleaning of all frequently touched surfaces</strong></li>
-                                <li><strong>External bug removal</strong></li>
-                                <li><strong>Free microfiber cloth</strong></li>
-                                <li><strong>Protection plan (complimentary maintenance clean within 15 days)</strong></li>
+                                <li>FINE TOOTH COMB in between seats cleaning</li>
+                                <li>Glove compartment cleaning</li>
+                                <li>Trunk shampoo and vaccum</li>
+                                <li>Door controls cleaning</li>
+                                <li>Hard to reach areas deep level shampoo</li>
+                                <li>Meticulous cleaning of all frequently touched surfaces</li>
+                                <li>External bug removal</li>
+                                <li>Free microfiber cloth</li>
+                                <li>Protection plan (complimentary maintenance clean within 15 days)</li>
                             </ul>
                         </div>
                         <button class="select-package-btn btn-green" data-package-type="Level 3 Detail - Sedan" data-package-price="349">Select Package</button>
@@ -342,13 +342,13 @@
                                 <li>Seat vaccum</li>
                                 <li>Surface protectent for the dash and display/controls</li>
                                 <li>Steering wheel and dash clean</li>
-                                <li><strong>Shampoo carpets and seats</strong></li>
-                                <li><strong>Premium Leather treatment</strong></li>
-                                <li><strong>Door jam cleaning</strong></li>
-                                <li><strong>Rims and tires cleaned and wiped down</strong></li>
-                                <li><strong>Console scrub down</strong></li>
-                                <li><strong>Pet hair removal</strong></li>
-                                <li><strong>Odor removal</strong></li>
+                                <li>Shampoo carpets and seats</li>
+                                <li>Premium Leather treatment</li>
+                                <li>Door jam cleaning</li>
+                                <li>Rims and tires cleaned and wiped down</li>
+                                <li>Console scrub down</li>
+                                <li>Pet hair removal</li>
+                                <li>Odor removal</li>
                             </ul>
                         </div>
                         <button class="select-package-btn btn-green" data-package-type="Level 2 Detail - SUV/Truck" data-package-price="299">Select Package</button>
@@ -375,15 +375,15 @@
                                 <li>Console scrub down</li>
                                 <li>Pet hair removal</li>
                                 <li>Odor removal</li>
-                                <li><strong>FINE TOOTH COMB in between seats cleaning</strong></li>
-                                <li><strong>Glove compartment cleaning</strong></li>
-                                <li><strong>Trunk shampoo and vaccum</strong></li>
-                                <li><strong>Door controls cleaning</strong></li>
-                                <li><strong>Hard to reach areas deep level shampoo</strong></li>
-                                <li><strong>Meticulous cleaning of all frequently touched surfaces</strong></li>
-                                <li><strong>External bug removal</strong></li>
-                                <li><strong>Free microfiber cloth</strong></li>
-                                <li><strong>Protection plan (complimentary maintenance clean within 15 days)</strong></li>
+                                <li>FINE TOOTH COMB in between seats cleaning</li>
+                                <li>Glove compartment cleaning</li>
+                                <li>Trunk shampoo and vaccum</li>
+                                <li>Door controls cleaning</li>
+                                <li>Hard to reach areas deep level shampoo</li>
+                                <li>Meticulous cleaning of all frequently touched surfaces</li>
+                                <li>External bug removal</li>
+                                <li>Free microfiber cloth</li>
+                                <li>Protection plan (complimentary maintenance clean within 15 days)</li>
                             </ul>
                         </div>
                         <button class="select-package-btn btn-green" data-package-type="Level 3 Detail - SUV/Truck" data-package-price="399">Select Package</button>
