--- a/customer_portal.html
+++ b/customer_portal.html
@@ -162,7 +162,7 @@
             padding-bottom: 1rem; /* Added padding-bottom for spacing when open */
         }
         .feature-dropdown.show {
-            max-height: 500px; /* Max height to allow content to show, adjust if needed */
+            max-height: 1000px; /* Increased max-height to accommodate more features */
             display: block; /* Ensure it's block for transition */
         }
     </style>
@@ -200,15 +200,13 @@
             <div id="upcoming-appointments-section" class="feature-section bg-blue-100 border-l-4 border-blue-500 text-blue-700 p-4 rounded-lg" role="alert">
                 <p class="font-bold">Upcoming Appointments</p>
                 <div id="upcoming-appointments-list" class="space-y-2">
-                    <!-- Upcoming appointments will be loaded here -->
-                </div>
+                    </div>
                 <div class="mt-4 text-sm">
                     <p>Questions about your appointment, or need to make a change?</p>
                     <a href="tel:4052955189" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded mt-2">Call (405) 295-5189</a>
                 </div>
             </div>
 
-            <!-- New Booking Flow - Step 1: Vehicle Type Selection -->
             <div id="vehicle-type-selection" class="bg-white p-8 rounded-xl shadow-md hidden">
                 <h3 class="text-2xl font-bold text-gray-700 mb-4 text-center">Select Your Vehicle Type</h3>
                 <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
@@ -218,11 +216,9 @@
                 </div>
             </div>
 
-            <!-- New Booking Flow - Step 2: Package Selection -->
             <div id="package-selection-container" class="bg-white p-8 rounded-xl shadow-md hidden">
                 <h3 class="text-2xl font-bold text-gray-700 mb-4 text-center">Select Your Package</h3>
 
-                <!-- Sedan Packages -->
                 <div id="sedan-packages-display" class="pricing-grid hidden">
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 1 Detail</h4>
@@ -306,7 +302,6 @@
                     </div>
                 </div>
 
-                <!-- SUV/Truck Packages -->
                 <div id="suv-truck-packages-display" class="pricing-grid hidden">
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 1 Detail</h4>
@@ -391,7 +386,6 @@
                 </div>
             </div>
 
-            <!-- Original Booking Form - now Step 3 -->
             <div id="booking-form-section" class="bg-white p-8 rounded-xl shadow-md hidden">
                 <h3 class="text-2xl font-bold text-gray-700 mb-4">Book a New Detail</h3>
                 <p class="text-lg font-semibold text-gray-800 mb-4">Selected Package: <span id="selected-package-display" class="text-blue-600"></span></p>
@@ -418,8 +412,7 @@
                         <div>
                             <label for="booking-time-buttons" class="block text-sm font-medium text-gray-700 mb-1">Time</label>
                             <div id="booking-time-buttons" class="grid grid-cols-3 gap-2">
-                                <!-- Time buttons will be loaded here -->
-                            </div>
+                                </div>
                             <input type="hidden" id="selected-booking-time" name="booking-time" required>
                         </div>
                     </div>
@@ -439,8 +432,7 @@
                     <div id="payment-schedule" class="bg-gray-100 p-4 rounded-lg mb-4">
                         <h5 class="font-semibold text-gray-700 mb-2">Your Payment Plan:</h5>
                         <div class="space-y-2" id="installments-list">
-                            <!-- Installments will be loaded here -->
-                        </div>
+                            </div>
                     </div>
 
                     <form id="financing-booking-form" class="space-y-4">
@@ -452,8 +444,7 @@
                             <div>
                                 <label for="financing-time-buttons" class="block text-sm font-medium text-gray-700 mb-1">Time</label>
                                 <div id="financing-time-buttons" class="grid grid-cols-3 gap-2">
-                                    <!-- Financing time buttons will be loaded here -->
-                                </div>
+                                    </div>
                                 <input type="hidden" id="selected-financing-time" name="financing-booking-time" required>
                             </div>
                         </div>
@@ -474,8 +465,7 @@
             </div>
 
             <div id="vehicle-management-section" class="form-section bg-white p-8 rounded-xl shadow-md">
-                <!-- Vehicle management forms will be rendered here by JS -->
-            </div>
+                </div>
 
             <div id="address-edit-section" class="form-section bg-white p-8 rounded-xl shadow-md">
                  <h3 class="text-xl font-bold text-gray-700 mb-4">Update Address</h3>
