--- a/customer_portal.html
+++ b/customer_portal.html
@@ -10,16 +10,26 @@
         body { font-family: 'Inter', sans-serif; }
         .pac-container { z-index: 1050 !important; }
         .form-section, .feature-section, #vehicle-type-selection, #package-selection-container, #booking-form-section, #confirmation-message { display: none; } /* Hide sections by default */
+        
         /* Custom styles for time buttons */
         .time-button {
-            @apply px-4 py-2 rounded-lg border-2 border-gray-300 /* border-gray-300 */ text-gray-700 font-medium cursor-pointer transition-colors duration-200;
+            /* Base styles for all time buttons */
+            @apply px-4 py-2 rounded-lg border-2 font-medium cursor-pointer transition-all duration-300;
+            @apply bg-white text-blue-700 border-blue-400 shadow-sm; /* Default look, similar to vehicle buttons */
+        }
+        .time-button:hover:not(.disabled) {
+            /* Hover effect for active buttons */
+            @apply bg-blue-50 text-blue-800 shadow-md;
         }
         .time-button.selected {
-            @apply bg-blue-600 text-white border-green-600; /* Green border for selected time */
+            /* Selected state */
+            @apply bg-blue-600 text-white border-blue-600 shadow-lg; /* Stronger blue, matching active vehicle button */
         }
         .time-button.disabled {
-            @apply bg-gray-200 text-gray-400 cursor-not-allowed border-gray-300;
+            /* Disabled state */
+            @apply bg-gray-200 text-gray-400 cursor-not-allowed border-gray-300 shadow-inner; /* Subtle shadow for disabled */
         }
+
         /* Vehicle type selection buttons - Direct Tailwind classes for robustness */
         .vehicle-type-button {
             padding: 0.75rem 1.5rem; /* px-6 py-3 */
@@ -200,13 +210,15 @@
             <div id="upcoming-appointments-section" class="feature-section bg-blue-100 border-l-4 border-blue-500 text-blue-700 p-4 rounded-lg" role="alert">
                 <p class="font-bold">Upcoming Appointments</p>
                 <div id="upcoming-appointments-list" class="space-y-2">
-                    </div>
+                    <!-- Upcoming appointments will be loaded here -->
+                </div>
                 <div class="mt-4 text-sm">
                     <p>Questions about your appointment, or need to make a change?</p>
                     <a href="tel:4052955189" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded mt-2">Call (405) 295-5189</a>
                 </div>
             </div>
 
+            <!-- New Booking Flow - Step 1: Vehicle Type Selection -->
             <div id="vehicle-type-selection" class="bg-white p-8 rounded-xl shadow-md hidden">
                 <h3 class="text-2xl font-bold text-gray-700 mb-4 text-center">Select Your Vehicle Type</h3>
                 <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
@@ -216,9 +228,11 @@
                 </div>
             </div>
 
+            <!-- New Booking Flow - Step 2: Package Selection -->
             <div id="package-selection-container" class="bg-white p-8 rounded-xl shadow-md hidden">
                 <h3 class="text-2xl font-bold text-gray-700 mb-4 text-center">Select Your Package</h3>
 
+                <!-- Sedan Packages -->
                 <div id="sedan-packages-display" class="pricing-grid hidden">
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 1 Detail</h4>
@@ -302,6 +316,7 @@
                     </div>
                 </div>
 
+                <!-- SUV/Truck Packages -->
                 <div id="suv-truck-packages-display" class="pricing-grid hidden">
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 1 Detail</h4>
@@ -386,6 +401,7 @@
                 </div>
             </div>
 
+            <!-- Original Booking Form - now Step 3 -->
             <div id="booking-form-section" class="bg-white p-8 rounded-xl shadow-md hidden">
                 <h3 class="text-2xl font-bold text-gray-700 mb-4">Book a New Detail</h3>
                 <p class="text-lg font-semibold text-gray-800 mb-4">Selected Package: <span id="selected-package-display" class="text-blue-600"></span></p>
@@ -412,7 +428,8 @@
                         <div>
                             <label for="booking-time-buttons" class="block text-sm font-medium text-gray-700 mb-1">Time</label>
                             <div id="booking-time-buttons" class="grid grid-cols-3 gap-2">
-                                </div>
+                                <!-- Time buttons will be loaded here -->
+                            </div>
                             <input type="hidden" id="selected-booking-time" name="booking-time" required>
                         </div>
                     </div>
@@ -432,7 +449,8 @@
                     <div id="payment-schedule" class="bg-gray-100 p-4 rounded-lg mb-4">
                         <h5 class="font-semibold text-gray-700 mb-2">Your Payment Plan:</h5>
                         <div class="space-y-2" id="installments-list">
-                            </div>
+                            <!-- Installments will be loaded here -->
+                        </div>
                     </div>
 
                     <form id="financing-booking-form" class="space-y-4">
@@ -444,7 +462,8 @@
                             <div>
                                 <label for="financing-time-buttons" class="block text-sm font-medium text-gray-700 mb-1">Time</label>
                                 <div id="financing-time-buttons" class="grid grid-cols-3 gap-2">
-                                    </div>
+                                    <!-- Financing time buttons will be loaded here -->
+                                </div>
                                 <input type="hidden" id="selected-financing-time" name="financing-booking-time" required>
                             </div>
                         </div>
@@ -465,7 +484,8 @@
             </div>
 
             <div id="vehicle-management-section" class="form-section bg-white p-8 rounded-xl shadow-md">
-                </div>
+                <!-- Vehicle management forms will be rendered here by JS -->
+            </div>
 
             <div id="address-edit-section" class="form-section bg-white p-8 rounded-xl shadow-md">
                  <h3 class="text-xl font-bold text-gray-700 mb-4">Update Address</h3>
